--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dot_bottom_nav_bar
-description: This dot package provides you with a navigation bar.
+description: A flutter package that provides awesome bottom navigation bar with dot indicator.
 version: 0.0.1
 homepage: 'https://github.com/amin-allizadeh/dot_bottom_nav_bar.git'
 
